--- a/deployment-weather-app.yaml
+++ b/deployment-weather-app.yaml
@@ -13,10 +13,10 @@ spec:
         app: weather-app
     spec:
       containers:
-      - name: weather-app
-        image: webage.azurecr.io/weather-app
-        ports:
-        - containerPort: 5070
+        - name: weather-app
+          image: acrandyolab.azurecr.io/weather-app
+          ports:
+            - containerPort: 5070
 ---
 apiVersion: v1
 kind: Service
@@ -24,9 +24,9 @@ metadata:
   name: service-weather-app
 spec:
   ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 5070
+    - port: 80
+      protocol: TCP
+      targetPort: 5070
   type: LoadBalancer
   externalTrafficPolicy: Cluster
   selector:
